# boulderbat

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: collector.py  db.py  main.py
backend/: main.py  pyproject.toml
backend/app/: db.py  import_production_history.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: HistoryView.tsx  LiveView.tsx  TypicalWeekView.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  select.tsx  tabs.tsx
frontend/src/lib/: url-state.ts
