[project]
name = "boulderbat"
version = "0.1.0"
description = "Boulderbar capacity tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "apscheduler>=3.10",
    "aiosqlite>=0.20",
    "aiofiles>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
